methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:28: error: ';' expected but 'else' found.
  else{
  ^